--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ scipy = "^1.10.1"
 opencv-python = "^4.7.0.72"
 numpy = "^1.24.2"
 openpyxl = "^3.1.2"
+pysimplegui = "^4.60.4"
 
 
 [build-system]
