--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,10 @@ openpyxl = "^3.1.2"
 pysimplegui = "^4.60.4"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.2"
+pytest-mock = "^3.10.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
