--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "video-vocal-rt"
-version = "0.3.7"
+version = "0.4.0"
 description = "Video-Vocal-RT: a minimal package for vocal response to video"
 authors = ["Loonan Chauvette <loonan.chauvette@gmail.com>"]
 readme = "README.md"
@@ -28,11 +28,14 @@ opencv-python = "^4.7.0.72"
 numpy = "^1.24.2"
 openpyxl = "^3.1.2"
 pysimplegui = "^4.60.4"
+pillow = "<10.0.0"
+ffpyplayer = "^4.5.0"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.2"
 pytest-mock = "^3.10.0"
+pyinstaller = "^5.9.0"
 
 [build-system]
 requires = ["poetry-core"]
